--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
@@ -493,17 +493,3 @@
     </script>
 </body>
 </html>
-
-                        formTitle.textContent = 'লগইন';
-                        authButton.textContent = 'লগইন';
-                        switchMode.textContent = 'নতুন ইউজার? সাইন-আপ করুন';
-                    })
-                    .catch((error) => {
-                        showMessage('সাইন-আপ ব্যর্থ। পাসওয়ার্ড কমপক্ষে ৬ অক্ষরের হতে হবে।', true);
-                    });
-            }
-        });
-    </script>
-</body>
-</html>
-
