--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
             display: block;
         }
         .menu-item {
-            padding: 12px 16px;
-            display: flex;
-            align-items: center;
-            border-bottom: 1px solid #f1f5f9;
-            transition: background 0.2s;
-        }
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #f1f5f9;
+    transition: background 0.2s;
+    color: #000000; /* কালো কালার */
+    text-decoration: none;
+}
         .menu-item:hover {
             background: #f8fafc;
         }
@@ -2172,3 +2174,4 @@
     </script>
 </body>
 </html>
+
