--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>শিক্ষা হাব | প্রিমিয়াম মোবাইল কমিউনিটি</title>
+    <title>PublicBook</title>
     <!-- Tailwind CSS লোড করা হচ্ছে -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons লোড করা হচ্ছে -->
@@ -2174,4 +2174,5 @@
     </script>
 </body>
 </html>
+
 
