--- a/index.html
+++ b/index.html
@@ -399,15 +399,16 @@
     <script>
         // Firebase কনফিগারেশন
         const firebaseConfig = {
-            apiKey: "AIzaSyBcDC4UMsTgo2IAXUxmTF2UqpvgfRWOwas",
-            authDomain: "live-tv-9521d.firebaseapp.com",
-            databaseURL: "https://live-tv-9521d-default-rtdb.firebaseio.com",
-            projectId: "live-tv-9521d",
-            storageBucket: "live-tv-9521d.firebasestorage.app",
-            messagingSenderId: "475229762007",
-            appId: "1:475229762007:web:9a42815a3bd43acabf5b92",
-            measurementId: "G-RH9L4JG4WT"
-        };
+      apiKey: "AIzaSyBrtSoiWZQHZjuPX6t4JTLV3AdNB4WjH0M",
+      authDomain: "publicbookapp.firebaseapp.com",
+      databaseURL: "https://publicbookapp-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "publicbookapp",
+      storageBucket: "publicbookapp.appspot.com",
+      messagingSenderId: "45812229205",
+      appId: "1:45812229205:web:d0f69b6e3c4a5f7b2ba0dc",
+      measurementId: "G-BD3TX6FVM0"
+    };
+        
 
         let database, auth, currentUser;
         let isSigningUp = false;
@@ -2174,6 +2175,7 @@
     </script>
 </body>
 </html>
+
 
 
 
